<resources>
    <string name="app_name">Smartwatch &amp; Cardio</string>
    <string name="hello">Hellos</string>
    <string name="title_activity_inicio">inicio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="titulo_inicio">Inicio</string>
    <string name="titulo_historial_test">Historial test</string>
    <string name="titulo_perfil">Perfil</string>
    <string-array name="sexos">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
    <string name="title_activity_comprobacion">Comprobación</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="ya_tienes_una_cuenta_text">¿Ya tienes una cuenta? </string>
    <string name="register_text_view_btn">Inicia sesión</string>
    <string name="create_account_btn">CREAR CUENTA</string>
    <string name="login_btn">INICIAR SESIÓN</string>
    <string name="gender_text_view">Sexo</string>
    <string name="iniciar_sesion_text_view">Inicio de sesión</string>
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Contraseña</string>
    <string name="no_tienes_una_cuenta_text">¿No tienes una cuenta?</string>
    <string name="register_text_view_link">Regístrate</string>
    <string name="edad_edit_text">Edad</string>
    <string name="confirm_password_edit_text">Confirmar contraseña</string>
    <string name="password_edit_text2">Contraseña</string>
    <string name="email_edit_text2">Email</string>
    <string name="nombre_completo_edit_text">Nombre completo</string>
    <string name="registrarse_text_view">Registrarse</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="continuar">CONTINUAR</string>
    <string name="url_autorizacion">Url Autorizacion</string>
    <string name="abrir_navegador">Abrir navegador</string>
    <string name="comprobando_la_autorizacion_con_el_reloj">Comprobando autorizacion con el smartwatch</string>
    <string name="empecemos">¡Empecemos!</string>
    <string name="obtener_autorizacion">Obtener autorizacion</string>
    <string name="autorizacion_existosa">AUTORIZACIÓN EXITOSA</string>
    <string name="mensaje_exito">La autorización con el reloj se ha realizado correctamente</string>
    <string name="autorizacion_fallida">AUTORIZACIÓN FALLIDA</string>
    <string name="mensaje_fallifo">La autorizacion con el reloj aún no se ha realizado o ha fallado</string>
    <string name="info_enlace">Introduce el enlace de la autorización</string>
    <string name="mensaje_instrucciones">Para la autorización, necesita darle a ese botón , donde se le abriá un navegador donde tendras que inicar sesión con una cuenta Withings. Una vez aceptado, copia la url de la autorización y pegala en Url Autorizacion. Ese codigo de autenticación es de 30 segundos, sino, tendrás que hacerlo de nuevo</string>
    <string name="text_info_emc">Obteniendo informacion del resultado</string>
</resources>