<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/icono_inicio"
        android:tint="@color/colorBotones"
        android:state_checked="true"
        android:title="@string/titulo_inicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="unlabeled"/>




    <item
        android:id="@+id/navigation_historial"
        android:icon="@drawable/icono_historial"
        android:tint="@color/colorBotones"
        android:title="@string/titulo_historial_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="unlabeled"/>

    <item
        android:id="@+id/navigation_perfil"
        android:tint="@color/colorBotones"
        android:icon="@drawable/icono_perfil"
        android:title="@string/titulo_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="unlabeled"/>

</menu>