<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="145dp"
        android:layout_height="131dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/inicioSesion_text"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="130dp"
        android:autoText="false"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/registrarse_text_view"
        android:textColor="#FE4141"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated,TextSizeCheck,TextViewEdits" />

    <EditText
        android:id="@+id/nombrecompleto_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/nombre_completo_edit_text"
        android:padding="10dp"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inicioSesion_text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/email_edit_text2"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombrecompleto_edit_text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password_edit_text2"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirmPassword_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/confirm_password_edit_text"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edad_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/edad_edit_text"
        android:padding="10dp"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword_edit_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/sexo_text"
        android:layout_width="117sp"
        android:layout_height="23sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/gender_text_view"
        android:textColor="#ADADAD"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad_edit_text"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:background="@drawable/rounded_corner"
        android:layout_width="251dp"
        android:layout_height="53dp"
        app:layout_constraintStart_toStartOf="@+id/sexo_text"
        app:layout_constraintTop_toBottomOf="@+id/sexo_text" />

    <Button
        android:id="@+id/createAccount_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="#FE4141"
        android:text="@string/create_account_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_spinner"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="184dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_button"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/register_text_view_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_text_view_btn"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:text="@string/ya_tienes_una_cuenta_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>