<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="268dp"
        android:layout_height="280dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="85dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/inicioSesion_text"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:autoText="false"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/iniciar_sesion_text_view"
        android:textColor="#FE4141"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="Deprecated,TextViewEdits,TextSizeCheck" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/email_edit_text"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inicioSesion_text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password_edit_text"
        android:padding="10dp"
        android:textSize="17sp"
        android:textStyle="normal"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        android:autofillHints="" />

    <Button
        android:id="@+id/iniciarSesion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="#FE4141"
        android:text="Iniciar sesión"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="192dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion_button"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/no_tienes_una_cuenta_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

    <TextView
        android:id="@+id/register_text_view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_text_view_link"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>